corrige erros de caminho para as paginas HTML e img das paginas e erros de CSS

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>DF Checkpoints</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="style.css">
         <link rel="shortcut icon" href="img/img_home/favicon.png"
             type="image/x-icon">
     </head>
@@ -26,11 +26,11 @@
             <a href="index.html">Início</a>
             <a href="https://ouvidoria.df.gov.br/canal-atendimento-162"
                 target="_blank">Contato</a>
-            <a href="nicolandia.html">Nicolândia</a>
-            <a href="planetario.html">Planetário</a>
-            <a href="zoologico.html">Zoológico</a>
-            <a href="catedral.html">Catedral</a>
-            <a href="torreTV.html">Torre de TV</a>
+            <a href="pages/nicolandia.html">Nicolândia</a>
+            <a href="pages/planetario.html">Planetário</a>
+            <a href="pages/zoologico.html">Zoológico</a>
+            <a href="pages/catedral.html">Catedral</a>
+            <a href="pages/torreTV.html">Torre de TV</a>
         </nav>
     </header>
     <body>
@@ -42,4 +42,11 @@
             <p>Explore os principais pontos turísticos do Distrito Federal.</p>
         </div>
     </body>
+    <footer>
+        <div>
+            <p>© 2025 DF Checkpoints. Todos os direitos reservados.</p>
+            <p>Trabalho desenvolvido por Alunos da Faculdade SENAC -
+                Brasília/DF</p>
+        </div>
+    </footer>
 </html>
