--- a/pages/planetario.html
+++ b/pages/planetario.html
@@ -5,11 +5,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Planetário</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="/style.css">
+        <link rel="icon" type="image/x-icon" href="/img/img_home/favicon.png">
     </head>
     <header id="cabeçalho">
         <div id="logo">
-            <img src="img/img_home/brasao-do-distrito-federal.png"
+            <img src="/img/img_home/brasao-do-distrito-federal.png"
                 alt="logo do Distrito Federal" width="100" height="100">
         </div>
 
@@ -22,7 +23,7 @@
         </label>
 
         <nav id="linksHeader">
-            <a href="index.html">Início</a>
+            <a href="/index.html">Início</a>
             <a href="https://ouvidoria.df.gov.br/canal-atendimento-162"
                 target="_blank">Contato</a>
             <a href="nicolandia.html">Nicolândia</a>
@@ -35,10 +36,10 @@
     <body id="planetario-body">
         <h1 id="title">Planetário de Brasília</h1>
 
-        <img class="imgPlanet" src="img/img_planet/planetario1.webp"
+        <img class="imgPlanet" src="/img/img_planet/planetario1.webp"
             alt="Planetário de Brasília" class="imagem-principal">
 
-        <p>
+        <p class="planetario-text">
             O Planetário de Brasília foi inaugurado em 15 de março de 1974. Ao
             ser inaugurado, o espaço público recebeu o
             equipamento mais avançado da época, o projetor central astronômico
@@ -53,10 +54,10 @@
             Convenções Ulysses Guimarães.<br>
         </p>
 
-        <img src="img/img_planet/planetario2.jpg"
+        <img src="/img/img_planet/planetario2.jpg"
             alt="Planetário por fora" class="imagem-media">
 
-        <p>
+        <p class="planetario-text">
             Na década de 1990, a programação dava atenção a todo tipo de
             público. Crianças de 4 a 8 anos assistiam ao
             Robozinho Blitz e as Estrelas. A garotada de até 12 anos curtia
@@ -70,7 +71,7 @@
             e Tecnologia (Sematec).
             <br>
             <br>
-            <img src="img/img_planet/planetario3.jpeg"
+            <img src="/img/img_planet/planetario3.jpeg"
                 alt="Interior do Planetário" class="imagem-pequena">
             <br>
             <br>
