--- a/pages/catedral.html
+++ b/pages/catedral.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Catedral</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="/style.css">
     </head>
     <header id="cabeçalho">
         <div id="logo">
-            <img src="img/img_home/brasao-do-distrito-federal.png"
+            <img src="/img/img_home/brasao-do-distrito-federal.png"
                 alt="logo do Distrito Federal" width="100" height="100">
         </div>
 
@@ -21,7 +21,7 @@
         </label>
 
         <nav id="linksHeader">
-            <a href="index.html">Início</a>
+            <a href="/index.html">Início</a>
             <a href="https://ouvidoria.df.gov.br/canal-atendimento-162"
                 target="_blank">Contato</a>
             <a href="nicolandia.html">Nicolândia</a>
@@ -35,10 +35,11 @@
         <div>
             <h1>Catedral Metropolitana de Brasília</h1>
             <br>
-            <img id="map-image" src="img/img_catedral/catedral.jpg"
+            <img id="map-image" src="/img/img_catedral/catedral.jpg"
                 alt="Catedral de Brasília" width="600" height="400">
             <p>A Catedral Metropolitana de Brasília, projetada por Oscar
-                Niemeyer, é um ícone da arquitetura moderna e um dos principais
+                Niemeyer, é um ícone da arquitetura moderna e um dos
+                principais
                 pontos turísticos da cidade. Sua estrutura em forma de mãos
                 erguidas simboliza a fé e a espiritualidade.</p>
         </div>
