--- a/pages/zoologicoPages/Anfibios.html
+++ b/pages/zoologicoPages/Anfibios.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Seção Anfíbios</title>
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="/style.css">
         <link rel="icon" sizes="32x32"
-            href="../img/img_zoologico/ReptileEye.webp">
+            href="/img/img_zoologico/ReptileEye.webp">
     </head>
     <header class="banner">
         <a href="../Zoologico.html" class="home">Home</a>
@@ -15,7 +15,7 @@
         <h1 class="zoo-title"> Seção de Anfíbios </h1>
         <div class="BoxStandardLeft">
             <img class="BoxImageStandard"
-                src="../img/img_zoologico/Axolote.jpg">
+                src="/img/img_zoologico/Axolote.jpg">
             <p class="BoxStandrdTextLeft">
                 Nome: Axolote (Ambystoma mexicanum)<br>
                 Classe: Amphibia<br>
@@ -45,7 +45,7 @@
                 de Marrocos.<br>
             </p>
             <img class="BoxImageStandard"
-                src="../img/img_zoologico/Salamandra-de-costelas-salientes.jpeg">
+                src="/img/img_zoologico/Salamandra-de-costelas-salientes.jpeg">
         </div>
 
     </body>
