--- a/pages/zoologicoPages/Artropodes.html
+++ b/pages/zoologicoPages/Artropodes.html
@@ -4,18 +4,18 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Seção Artrópodes</title>
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="/style.css">
         <link rel="icon" sizes="32x32"
-            href="../img/img_zoologico/ReptileEye.webp">
+            href="/img/img_zoologico/ReptileEye.webp">
     </head>
     <header class="banner">
-        <a href="../Zoologico.html" class="home">Home</a>
+        <a href="/pages/zoologico.html" class="home">Home</a>
     </header>
     <body class="background">
         <h1 class="zoo-title"> Seção de Artrópodes </h1>
         <div class="BoxStandardLeft">
             <img class="BoxImageStandard"
-                src="../img/img_zoologico/Aranha-armadeira.png">
+                src="/img/img_zoologico/Aranha-armadeira.png">
             <p class="BoxStandrdTextLeft">
                 Nome: Aranha-armadeira (Phoneutria nigriventer)<br>
                 Classe Arachnidae<br>
@@ -41,12 +41,12 @@
                 com pêlos avermelhados.<br>
             </p>
             <img class="BoxImageStandard"
-                src="../img/img_zoologico/Aranha Caranguejeira.jpg">
+                src="/img/img_zoologico/Aranha Caranguejeira.jpg">
         </div>
 
         <div class="BoxStandardLeft">
             <img class="BoxImageStandard"
-                src="../img/img_zoologico/Escorpiao.jpg">
+                src="/img/img_zoologico/Escorpiao.jpg">
             <p class="BoxStandrdTextLeft">
                 Nome: Escorpiao<br>
                 Classe:Arachnida<br>
@@ -70,11 +70,11 @@
                 cauda.<br>
             </p>
             <img class="BoxImageStandard"
-                src="../img/img_zoologico/Escorpião-amarelo.jpg">
+                src="/img/img_zoologico/Escorpião-amarelo.jpg">
         </div>
 
     </body>
     <footer class="footer">
-        <a href="Zoologico.html" class="home">Home</a>
+        <a href="/pages/zoologico.html" class="home">Home</a>
     </footer>
 </html>
