Adiciona Footer e inicia criacao de Catedral

--- a/index.html
+++ b/index.html
@@ -42,11 +42,41 @@
             <p>Explore os principais pontos turísticos do Distrito Federal.</p>
         </div>
     </body>
-    <footer>
+    <footer id="footer-content">
         <div>
-            <p>© 2025 DF Checkpoints. Todos os direitos reservados.</p>
-            <p>Trabalho desenvolvido por Alunos da Faculdade SENAC -
-                Brasília/DF</p>
+            <h5>Trabalho desenvolvido por Alunos da Faculdade SENAC -
+                Brasília/DF</h5>
+            <br>
+            <div id="easterEgg">
+                <a class="footerLink" href="https://github.com/Batatiago"
+                    target="_blank">Tiago de Andrade Lima </a>
+                <img class="imgHover"
+                    src="img/img_home/fortnite-dance-anime.gif" alt="aniaDance">
+            </div>
+            <div>
+                <a class="footerLink" href="https://github.com/AndreBlackDragon"
+                    target="_blank">Andre Luis Macedo Nascimento</a>
+            </div>
+            <div>
+                <a class="footerLink" href="https://github.com/DouglasRochaTech"
+                    target="_blank">Douglas Rocha Vasco</a>
+            </div>
+            <div>
+                <a class="footerLink" href="https://github.com/FoxYokai"
+                    target="_blank">Jonas Santos Barbosa</a>
+            </div>
+            <div>
+                <a class="footerLink" href="https://github.com/Rapha3lmendess"
+                    target="_blank">Raphael Alves Mendes</a>
+            </div>
+            <div>
+                <a class="footerLink" href="https://github.com/CalebeBezerra"
+                    target="_blank">Calebe Bezerra Feitosa</a>
+            </div>
+        </div>
+        <div>
+            <p id="rights">© 2025 DF Checkpoints. Todos os direitos
+                reservados.</p>
         </div>
     </footer>
 </html>
