--- a/pages/catedral.html
+++ b/pages/catedral.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Catedral</title>
         <link rel="stylesheet" href="/style.css">
+        <link rel="shortcut icon" href="/img/img_catedral/favicon.png"
+            type="image/x-icon">
     </head>
     <header id="cabeçalho">
         <div id="logo">
@@ -32,8 +34,8 @@
         </nav>
     </header>
     <body>
-        <div>
-            <h1>Catedral Metropolitana de Brasília</h1>
+        <div id="catedralBody">
+            <h1 class="title">Catedral Metropolitana de Brasília</h1>
             <br>
             <img id="map-image" src="/img/img_catedral/catedral.jpg"
                 alt="Catedral de Brasília" width="600" height="400">
