--- a/pages/planetario.html
+++ b/pages/planetario.html
@@ -34,7 +34,7 @@
         </nav>
     </header>
     <body id="planetario-body">
-        <h1 id="title">Planetário de Brasília</h1>
+        <h1 class="title">Planetário de Brasília</h1>
 
         <img class="imgPlanet" src="/img/img_planet/planetario1.webp"
             alt="Planetário de Brasília" class="imagem-principal">
