Correcao de referencias de paginas

--- a/pages/catedral.html
+++ b/pages/catedral.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Catedral</title>
-        <link rel="stylesheet" href="/style.css">
-        <link rel="shortcut icon" href="/img/img_catedral/favicon.png"
+        <link rel="stylesheet" href="../style.css">
+        <link rel="shortcut icon" href="../img/img_catedral/favicon.png"
             type="image/x-icon">
     </head>
     <header id="cabeçalho">
         <div id="logo">
-            <img src="/img/img_home/brasao-do-distrito-federal.png"
+            <img src="../img/img_home/brasao-do-distrito-federal.png"
                 alt="logo do Distrito Federal" width="100" height="100">
         </div>
 
@@ -23,7 +23,7 @@
         </label>
 
         <nav id="linksHeader">
-            <a href="/index.html">Início</a>
+            <a href="../index.html">Início</a>
             <a href="https://ouvidoria.df.gov.br/canal-atendimento-162"
                 target="_blank">Contato</a>
             <a href="nicolandia.html">Nicolândia</a>
@@ -37,7 +37,7 @@
         <div id="catedralBody">
             <h1 class="title">Catedral Metropolitana de Brasília</h1>
             <br>
-            <img id="map-image" src="/img/img_catedral/catedral.jpg"
+            <img id="map-image" src="../img/img_catedral/catedral.jpg"
                 alt="Catedral de Brasília" width="600" height="400">
             <p>A Catedral Metropolitana de Brasília, projetada por Oscar
                 Niemeyer, é um ícone da arquitetura moderna e um dos
