--- a/pages/nicolandia.html
+++ b/pages/nicolandia.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Nicolândia</title>
-        <link rel="stylesheet" href="/style.css">
-        <link rel="icon" type="image/x-icon" href="/img/img_home/favicon.png">
+        <link rel="stylesheet" href="../style.css">
+        <link rel="icon" type="image/x-icon" href="../img/img_home/favicon.png">
     </head>
     <header id="cabeçalho">
         <div id="logo">
-            <img src="/img/img_home/brasao-do-distrito-federal.png"
+            <img src="../img/img_home/brasao-do-distrito-federal.png"
                 alt="logo do Distrito Federal" width="100" height="100">
         </div>
 
@@ -22,7 +22,7 @@
         </label>
 
         <nav id="linksHeader">
-            <a href="/index.html">Início</a>
+            <a href="../index.html">Início</a>
             <a href="https://ouvidoria.df.gov.br/canal-atendimento-162"
                 target="_blank">Contato</a>
             <a href="nicolandia.html">Nicolândia</a>
@@ -48,7 +48,7 @@
         <a href="https://www.youtube.com/watch?v=P3I5rbXh_OM" target="_blank"
             style="text-decoration: none; color: inherit;">
             <div class="BlocoAtracao" align="center">
-                <img class="Imagens" src="/img/img_nicolandia/360.webp"
+                <img class="Imagens" src="../img/img_nicolandia/360.webp"
                     alt="Atração 360" align="left">
                 <br>
                 <h2 class="Titulo">360</h2>
@@ -61,7 +61,7 @@
         <a href="https://www.youtube.com/watch?v=xMAOnRCMD-M" target="_blank"
             style="text-decoration: none; color: inherit;">
             <div class="BlocoAtracao" align="center">
-                <img class="Imagens" src="/img/img_nicolandia/KABUM.webp"
+                <img class="Imagens" src="../img/img_nicolandia/KABUM.webp"
                     alt="Atração KABUM" align="right">
                 <br>
                 <h2 class="Titulo">KABUM</h2>
@@ -73,7 +73,7 @@
         <a href="https://www.youtube.com/watch?v=UvDNt08jOV0" target="_blank"
             style="text-decoration: none; color: inherit;">
             <div class="BlocoAtracao" align="center">
-                <img class="Imagens" src="/img/img_nicolandia/SPOOK.webp"
+                <img class="Imagens" src="../img/img_nicolandia/SPOOK.webp"
                     alt="Atração SPOOK" align="left">
                 <br>
                 <h2 class="Titulo">SPOOK</h2>
@@ -87,7 +87,7 @@
         <a href="https://www.youtube.com/watch?v=nibGtR4E5hw" target="_blank"
             style="text-decoration: none; color: inherit;">
             <div class="BlocoAtracao" align="center">
-                <img class="Imagens" src="/img/img_nicolandia/colossus-loop.webp"
+                <img class="Imagens" src="../img/img_nicolandia/colossus-loop.webp"
                     alt="Atração Colossu's Loop" align="right">
                 <br>
                 <h2 class="Titulo">Colossu's Loop</h2>
@@ -100,7 +100,7 @@
         <a href="https://www.youtube.com/shorts/SX755fKDSTQ" target="_blank"
             style="text-decoration: none; color: inherit;">
             <div class="BlocoAtracao" align="center">
-                <img class="Imagens" src="/img/img_nicolandia/toboga-noite.webp"
+                <img class="Imagens" src="../img/img_nicolandia/toboga-noite.webp"
                     alt="Atração Tobogã" align="left">
                 <br>
                 <h2 class="Titulo">Tobogã</h2>
