--- a/pages/zoologico.html
+++ b/pages/zoologico.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Zoologico</title>
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="../style.css">
         <link rel="icon" sizes="32x32"
-            href="/img/img_zoologico/ReptileEye2.webp">
+            href="../img/img_zoologico/ReptileEye2.webp">
     </head>
     <header id="cabeçalho">
         <div id="logo">
-            <img src="/img/img_home/brasao-do-distrito-federal.png"
+            <img src="../img/img_home/brasao-do-distrito-federal.png"
                 alt="logo do Distrito Federal" width="100" height="100">
         </div>
 
@@ -23,7 +23,7 @@
         </label>
 
         <nav id="linksHeader">
-            <a href="/index.html">Início</a>
+            <a href="../index.html">Início</a>
             <a href="https://ouvidoria.df.gov.br/canal-atendimento-162"
                 target="_blank">Contato</a>
             <a href="nicolandia.html">Nicolândia</a>
@@ -39,7 +39,7 @@
         <div id="boxAnimals">
             <a id="linkAves" href="zoologicoPages/Aves.html">
                 <div class="boxAves">
-                    <img class="boxImageAves" src="/img/img_zoologico/Hawk.png"
+                    <img class="boxImageAves" src="../img/img_zoologico/Hawk.png"
                         alt>
                     <p class="boxText"> Aves </p>
                 </div></a>
@@ -48,13 +48,13 @@
                 <div class="boxMammals">
                     <p class="boxText"> Mamíferos </p>
                     <img class="boxImageMammals"
-                        src="/img/img_zoologico/LoboGuara.png" alt>
+                        src="../img/img_zoologico/LoboGuara.png" alt>
                 </div></a>
 
             <a id="linkReptiles" href="zoologicoPages/Reptiles.html">
                 <div class="boxReptiles">
                     <img class="boxImageReptiles"
-                        src="/img/img_zoologico/RainbowBoaRaw.webp" alt>
+                        src="../img/img_zoologico/RainbowBoaRaw.webp" alt>
                     <p class="boxText"> Répteis </p>
                 </div></a>
 
@@ -62,13 +62,13 @@
                 <div class="boxAmphibious">
                     <p class="boxText"> Anfíbios </p>
                     <img class="boxImageAmphibious"
-                        src="/img/img_zoologico/SapoFlecha.png" alt>
+                        src="../img/img_zoologico/SapoFlecha.png" alt>
                 </div></a>
 
             <a id="linkArtropodes" href="zoologicoPages/Artropodes.html">
                 <div class="boxArthropods">
                     <img class="boxImageArthropods"
-                        src="/img/img_zoologico/Tatuzinho.png" alt>
+                        src="../img/img_zoologico/Tatuzinho.png" alt>
                     <p class="boxText"> Artrópode </p>
                 </div></a>
 
@@ -76,18 +76,9 @@
                 <div class="boxButterflies">
                     <p class="boxText"> Borboletas </p>
                     <img class="boxImageAmphibious"
-                        src="/img/img_zoologico/BlueMorph.png" alt>
+                        src="../img/img_zoologico/BlueMorph.png" alt>
                 </div></a>
         </div>
-
-        <!--
-    <img class="SelectionBanner" src="img/Sky.webp" alt="Aves">
-    <img class="SelectionBanner" src="img/GreenHills.webp" alt="Mamiferos">
-    <img class="SelectionBanner" src="img/DesertHills.webp" alt="Reptiles">
-    <img class="SelectionBanner" src="img/Swamp.webp" alt="Amphibians">
-    <img class="SelectionBanner" src="img/FallenLog.webp" alt="Arthropods">
-    <img class="SelectionBanner" src="img/DewLeaf.webp" alt="Butterflies">
-    -->
 
     </body>
     <footer class="footer">
