--- a/pages/zoologicoPages/Aves.html
+++ b/pages/zoologicoPages/Aves.html
@@ -4,18 +4,18 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Seção Aves</title>
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="../../style.css">
         <link rel="icon" sizes="32x32"
-            href="/img/img_zoologico/ReptileEye.webp">
+            href="../../img/img_zoologico/ReptileEye.webp">
     </head>
     <header class="banner">
-        <a href="/pages/zoologico.html" class="home">Home</a>
+        <a href="../zoologico.html" class="home">Home</a>
     </header>
     <body class="background">
         <h1 class="zoo-title"> Seção de Aves </h1>
         <div class="BoxStandardLeft">
             <img class="BoxImageStandard"
-                src="/img/img_zoologico/Águia-chilena.jpg">
+                src="../../img/img_zoologico/Águia-chilena.jpg">
             <p class="BoxStandrdTextLeft">
                 Nome: Águia-chilena (Geranoaetus melanoleucus)
                 Classe: Aves <br>
@@ -46,11 +46,11 @@
                 humanas<br>
             </p>
             <img class="BoxImageStandard"
-                src="/img/img_zoologico/Arara-Azul-Grande.jpg">
+                src="../../img/img_zoologico/Arara-Azul-Grande.jpg">
         </div>
 
         <div class="BoxStandardLeft">
-            <img class="BoxImageStandard" src="/img/img_zoologico/Cabure.jpg">
+            <img class="BoxImageStandard" src="../../img/img_zoologico/Cabure.jpg">
             <p class="BoxStandrdTextLeft">
                 Nome: Caburé (Glaucidium brasilianum)<br>
                 Classe: Aves<br>
@@ -83,11 +83,11 @@
                 cinza-claro.<br>
             </p>
             <img class="BoxImageStandard"
-                src="/img/img_zoologico/Cardenal.jpg">
+                src="../../img/img_zoologico/Cardenal.jpg">
         </div>
 
         <div class="BoxStandardLeft">
-            <img class="BoxImageStandard" src="/img/img_zoologico/Gaviao.jpg">
+            <img class="BoxImageStandard" src="../../img/img_zoologico/Gaviao.jpg">
             <p class="BoxStandrdTextLeft">
                 Nome: Gavião-carrapateiro (Milvago chimachima)<br>
                 Classe: Aves<br>
@@ -111,6 +111,6 @@
 
     </body>
     <footer class="footer">
-        <a href="/pages/zoologico.html" class="home">Home</a>
+        <a href="../zoologico.html" class="home">Home</a>
     </footer>
 </html>
