--- a/pages/zoologicoPages/Borboletas.html
+++ b/pages/zoologicoPages/Borboletas.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Seção Borboletas</title>
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="../../style.css">
         <link rel="icon" sizes="32x32"
-            href="/img/img_zoologico/ReptileEye.webp">
+            href="../../img/img_zoologico/ReptileEye.webp">
     </head>
     <header class="banner">
         <a href="/pages/zoologico.html" class="home">Home</a>
@@ -15,7 +15,7 @@
         <h1 class="zoo-title"> Seção de Borboletas </h1>
         <div class="BoxStandardLeft">
             <img class="BoxImageStandard"
-                src="/img/img_zoologico/Borboleta-vítrea.png">
+                src="../../img/img_zoologico/Borboleta-vítrea.png">
             <p class="BoxStandrdTextLeft">
                 Nome: Borboleta-vítrea (Methona themisto)
             </p>
@@ -26,12 +26,12 @@
                 Borboleta-estaladeira-azul (Hamadryas laudamia)
             </p>
             <img class="BoxImageStandard"
-                src="/img/img_zoologico/Borboleta-estaladeira-azul.png">
+                src="../../img/img_zoologico/Borboleta-estaladeira-azul.png">
         </div>
 
         <div class="BoxStandardLeft">
             <img class="BoxImageStandard"
-                src="/img/img_zoologico/Borboleta-rabo-de-andorinha.png">
+                src="../../img/img_zoologico/Borboleta-rabo-de-andorinha.png">
             <p class="BoxStandrdTextLeft">
                 Nome: Borboleta-rabo-de-andorinha (Battus polydamas)
 
@@ -53,11 +53,11 @@
                 Nome: Borboleta-tigre (Mechanitis lysimnia)
             </p>
             <img class="BoxImageStandard"
-                src="/img/img_zoologico/Borboleta-tigre.png">
+                src="../../img/img_zoologico/Borboleta-tigre.png">
         </div>
 
     </body>
     <footer class="footer">
-        <a href="/pages/zoologico.html" class="home">Home</a>
+        <a href="../zoologico.html" class="home">Home</a>
     </footer>
 </html>
