--- a/pages/planetario.html
+++ b/pages/planetario.html
@@ -5,12 +5,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Planetário</title>
-        <link rel="stylesheet" href="/style.css">
-        <link rel="icon" type="image/x-icon" href="/img/img_home/favicon.png">
+        <link rel="stylesheet" href="../style.css">
+        <link rel="icon" type="image/x-icon" href="../img/img_home/favicon.png">
     </head>
     <header id="cabeçalho">
         <div id="logo">
-            <img src="/img/img_home/brasao-do-distrito-federal.png"
+            <img src="../img/img_home/brasao-do-distrito-federal.png"
                 alt="logo do Distrito Federal" width="100" height="100">
         </div>
 
@@ -23,7 +23,7 @@
         </label>
 
         <nav id="linksHeader">
-            <a href="/index.html">Início</a>
+            <a href="../index.html">Início</a>
             <a href="https://ouvidoria.df.gov.br/canal-atendimento-162"
                 target="_blank">Contato</a>
             <a href="nicolandia.html">Nicolândia</a>
@@ -36,7 +36,7 @@
     <body id="planetario-body">
         <h1 class="title">Planetário de Brasília</h1>
 
-        <img class="imgPlanet" src="/img/img_planet/planetario1.webp"
+        <img class="imgPlanet" src="../img/img_planet/planetario1.webp"
             alt="Planetário de Brasília" class="imagem-principal">
 
         <p class="planetario-text">
@@ -54,7 +54,7 @@
             Convenções Ulysses Guimarães.<br>
         </p>
 
-        <img src="/img/img_planet/planetario2.jpg"
+        <img src="../img/img_planet/planetario2.jpg"
             alt="Planetário por fora" class="imagem-media">
 
         <p class="planetario-text">
@@ -71,7 +71,7 @@
             e Tecnologia (Sematec).
             <br>
             <br>
-            <img src="/img/img_planet/planetario3.jpeg"
+            <img src="../img/img_planet/planetario3.jpeg"
                 alt="Interior do Planetário" class="imagem-pequena">
             <br>
             <br>
