--- a/pages/torreTV.html
+++ b/pages/torreTV.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Torre de TV</title>
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="../style.css">
     </head>
     <header id="cabeçalho">
         <div id="logo">
-            <img src="/img/img_home/brasao-do-distrito-federal.png"
+            <img src="../img/img_home/brasao-do-distrito-federal.png"
                 alt="logo do Distrito Federal" width="100" height="100">
         </div>
 
@@ -21,7 +21,7 @@
         </label>
 
         <nav id="linksHeader">
-            <a href="/index.html">Início</a>
+            <a href="../index.html">Início</a>
             <a href="https://ouvidoria.df.gov.br/canal-atendimento-162"
                 target="_blank">Contato</a>
             <a href="nicolandia.html">Nicolândia</a>
