--- a/pages/zoologicoPages/Mamiferos.html
+++ b/pages/zoologicoPages/Mamiferos.html
@@ -4,18 +4,18 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Seção Mamíferos</title>
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="../../style.css">
         <link rel="icon" sizes="32x32"
-            href="/img/img_zoologico/ReptileEye.webp">
+            href="../../img/img_zoologico/ReptileEye.webp">
     </head>
     <header class="banner">
-        <a href="/pages/zoologico.html" class="home">Home</a>
+        <a href="../zoologico.html" class="home">Home</a>
     </header>
     <body class="background">
         <h1 class="zoo-title"> Seção de Mamíferos </h1>
         <div class="BoxStandardLeft">
             <img class="BoxImageStandard"
-                src="/img/img_zoologico/Ariranha.jpg">
+                src="../../img/img_zoologico/Ariranha.jpg">
             <p class="BoxStandrdTextLeft">
                 Nome: Ariranha (Pteronura brasiliensis)<br>
                 Classe: Mammalia<br>
@@ -49,12 +49,12 @@
                 ventre claros.<br>
             </p>
             <img class="BoxImageStandard"
-                src="/img/img_zoologico/Cachorro-Do-Mato.jpeg">
+                src="../../img/img_zoologico/Cachorro-Do-Mato.jpeg">
         </div>
 
         <div class="BoxStandardLeft">
             <img class="BoxImageStandard"
-                src="/img/img_zoologico/Cervo-Do-Pantanel.jpeg">
+                src="../../img/img_zoologico/Cervo-Do-Pantanel.jpeg">
             <p class="BoxStandrdTextLeft">
                 Nome: Cervo-do-pantanal (Blastocerus dichotomus)<br>
                 Classe: Mammalia<br>
@@ -91,12 +91,12 @@
                 rosetas menores e mais abertas.<br>
             </p>
             <img class="BoxImageStandard"
-                src="/img/img_zoologico/Gato-do-mato-pequeno.jpeg">
+                src="../../img/img_zoologico/Gato-do-mato-pequeno.jpeg">
         </div>
 
         <div class="BoxStandardLeft">
             <img class="BoxImageStandard"
-                src="/img/img_zoologico/Lobo-guara.jpeg">
+                src="../../img/img_zoologico/Lobo-guara.jpeg">
             <p class="BoxStandrdTextLeft">
                 Nome: Lobo-guará (Chrysocyon brachyurus)<br>
                 Classe: Mammalia<br>
@@ -118,6 +118,6 @@
 
     </body>
     <footer class="footer">
-        <a href="/pages/zoologico.html" class="home">Home</a>
+        <a href="../zoologico.html" class="home">Home</a>
     </footer>
 </html>
