--- a/pages/zoologicoPages/Reptiles.html
+++ b/pages/zoologicoPages/Reptiles.html
@@ -4,18 +4,18 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Seção Répteis </title>
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="../../style.css">
         <link rel="icon" sizes="32x32"
-            href="/img/img_zoologico/ReptileEye2.webp">
+            href="../../img/img_zoologico/ReptileEye2.webp">
     </head>
     <header class="banner">
-        <a href="/pages/zoologico.html" class="home">Home</a>
+        <a href="../zoologico.html" class="home">Home</a>
     </header>
     <body class="background">
         <h1 class="zoo-title"> Seção de Répteis </h1>
         <div class="BoxStandardLeft">
             <img class="BoxImageStandard"
-                src="/img/img_zoologico/Jacaré-do-pantanal.jpg">
+                src="../../img/img_zoologico/Jacaré-do-pantanal.jpg">
             <p class="BoxStandrdTextLeft">
                 Nome: Jacaré-do-pantanal (Caiman yacare)<br>
                 Classe: Reptilia<br>
@@ -40,12 +40,12 @@
                 justamente para encaixarem nas fêmeas por ocasião da cópula.<br>
             </p>
             <img class="BoxImageStandard"
-                src="/img/img_zoologico/Jabuti-piranga.png">
+                src="../../img/img_zoologico/Jabuti-piranga.png">
         </div>
 
         <div class="BoxStandardLeft">
             <img class="BoxImageStandard"
-                src="/img/img_zoologico/Sucuri-verde.png">
+                src="../../img/img_zoologico/Sucuri-verde.png">
             <p class="BoxStandrdTextLeft">
                 Nome: Sucuri-verde (Eunectes murinus)<br>
                 Classe: Reptilia<br>
@@ -80,11 +80,11 @@
                 - Considera uma serpente pacífica e lenta.<br>
                 - Podem chegar ao tamanho aproximado de 4 metros.<br>
             </p>
-            <img class="BoxImageStandard" src="/img/img_zoologico/Jiboia.png">
+            <img class="BoxImageStandard" src="../../img/img_zoologico/Jiboia.png">
         </div>
 
     </body>
     <footer class="footer">
-        <a href="/pages/zoologico.html" class="home">Home</a>
+        <a href="../zoologico.html" class="home">Home</a>
     </footer>
 </html>
