Correcao background douglas + Easter egg

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
             <div>
                 <a class="footerLink" href="https://github.com/AndreBlackDragon"
                     target="_blank">Andre Luis Macedo Nascimento</a>
+                    <img class="imgHover"
+                        src="img/img_home/ToothlessDancing.gif" alt="">
             </div>
             <div>
                 <a class="footerLink" href="https://github.com/DouglasRochaTech"
