--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
                 <img class="imgHover"
                     src="img/img_home/fortnite-dance-anime.gif" alt="aniaDance">
             </div>
-            <div>
+            <div id="easterEgg">
                 <a class="footerLink" href="https://github.com/AndreBlackDragon"
                     target="_blank">Andre Luis Macedo Nascimento</a>
-                    <img class="imgHover"
-                        src="img/img_home/ToothlessDancing.gif" alt="">
+                <img class="imgHover"
+                    src="img/img_home/ToothlessDancing.gif" alt="ToothlessDancing">
             </div>
             <div>
                 <a class="footerLink" href="https://github.com/DouglasRochaTech"
