--- a/index.html
+++ b/index.html
@@ -67,9 +67,11 @@
                 <a class="footerLink" href="https://github.com/FoxYokai"
                     target="_blank">Jonas Santos Barbosa</a>
             </div>
-            <div>
+            <div id="easterEgg">
                 <a class="footerLink" href="https://github.com/Rapha3lmendess"
                     target="_blank">Raphael Alves Mendes</a>
+                <img height="auto + 10px" class="imgHover"
+                    src="img/img_home/ScratchBear.gif" alt="ToothlessDancing">
             </div>
             <div>
                 <a class="footerLink" href="https://github.com/CalebeBezerra"
