--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
             <div id="easterEgg">
                 <a class="footerLink" href="https://github.com/Rapha3lmendess"
                     target="_blank">Raphael Alves Mendes</a>
-                <img height="auto + 10px" class="imgHover"
-                    src="img/img_home/ScratchBear.gif" alt="ToothlessDancing">
+                <img class="imgHover"
+                    src="img/img_home/ScratchBear.gif" alt="ScratchBear">
             </div>
             <div>
                 <a class="footerLink" href="https://github.com/CalebeBezerra"
