integracao pontao aos arquivos e implemntacao de footer em todas as paginas

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             <a href="pages/planetario.html">Planetário</a>
             <a href="pages/zoologico.html">Zoológico</a>
             <a href="pages/catedral.html">Catedral</a>
-            <a href="pages/torreTV.html">Torre de TV</a>
+            <a href="pages/pontao.html">Pontão</a>
+            <a href="pages/eslplanada.html">Esplanada</a>
         </nav>
     </header>
     <body>
