--- a/pages/nicolandia.html
+++ b/pages/nicolandia.html
@@ -29,7 +29,8 @@
             <a href="planetario.html">Planetário</a>
             <a href="zoologico.html">Zoológico</a>
             <a href="catedral.html">Catedral</a>
-            <a href="torreTV.html">Torre de TV</a>
+            <a href="pontao.html">Pontão</a>
+            <a href="eslplanada.html">Esplanada</a>
         </nav>
     </header>
     <body id="nicolandia-body">
@@ -87,7 +88,8 @@
         <a href="https://www.youtube.com/watch?v=nibGtR4E5hw" target="_blank"
             style="text-decoration: none; color: inherit;">
             <div class="BlocoAtracao" align="center">
-                <img class="Imagens" src="../img/img_nicolandia/colossus-loop.webp"
+                <img class="Imagens"
+                    src="../img/img_nicolandia/colossus-loop.webp"
                     alt="Atração Colossu's Loop" align="right">
                 <br>
                 <h2 class="Titulo">Colossu's Loop</h2>
@@ -100,7 +102,8 @@
         <a href="https://www.youtube.com/shorts/SX755fKDSTQ" target="_blank"
             style="text-decoration: none; color: inherit;">
             <div class="BlocoAtracao" align="center">
-                <img class="Imagens" src="../img/img_nicolandia/toboga-noite.webp"
+                <img class="Imagens"
+                    src="../img/img_nicolandia/toboga-noite.webp"
                     alt="Atração Tobogã" align="left">
                 <br>
                 <h2 class="Titulo">Tobogã</h2>
@@ -112,4 +115,46 @@
             </div>
         </a>
     </body>
+    <footer id="footer-content">
+        <div>
+            <h5>Trabalho desenvolvido por Alunos da Faculdade SENAC -
+                Brasília/DF</h5>
+            <br>
+            <div id="easterEgg">
+                <a class="footerLink" href="https://github.com/Batatiago"
+                    target="_blank">Tiago de Andrade Lima </a>
+                <img class="imgHover"
+                    src="../img/img_home/fortnite-dance-anime.gif" alt="aniaDance">
+            </div>
+            <div id="easterEgg">
+                <a class="footerLink" href="https://github.com/AndreBlackDragon"
+                    target="_blank">Andre Luis Macedo Nascimento</a>
+                <img class="imgHover"
+                    src="../img/img_home/ToothlessDancing.gif"
+                    alt="ToothlessDancing">
+            </div>
+            <div>
+                <a class="footerLink" href="https://github.com/DouglasRochaTech"
+                    target="_blank">Douglas Rocha Vasco</a>
+            </div>
+            <div>
+                <a class="footerLink" href="https://github.com/FoxYokai"
+                    target="_blank">Jonas Santos Barbosa</a>
+            </div>
+            <div id="easterEgg">
+                <a class="footerLink" href="https://github.com/Rapha3lmendess"
+                    target="_blank">Raphael Alves Mendes</a>
+                <img class="imgHover"
+                    src="../img/img_home/ScratchBear.gif" alt="ScratchBear">
+            </div>
+            <div>
+                <a class="footerLink" href="https://github.com/CalebeBezerra"
+                    target="_blank">Calebe Bezerra Feitosa</a>
+            </div>
+        </div>
+        <div>
+            <p id="rights">© 2025 DF Checkpoints. Todos os direitos
+                reservados.</p>
+        </div>
+    </footer>
 </html>
