--- a/pages/zoologico.html
+++ b/pages/zoologico.html
@@ -30,7 +30,8 @@
             <a href="planetario.html">Planetário</a>
             <a href="zoologico.html">Zoológico</a>
             <a href="catedral.html">Catedral</a>
-            <a href="torreTV.html">Torre de TV</a>
+            <a href="pontao.html">Pontão</a>
+            <a href="eslplanada.html">Esplanada</a>
         </nav>
     </header>
     <body class="background">
@@ -39,7 +40,8 @@
         <div id="boxAnimals">
             <a id="linkAves" href="zoologicoPages/Aves.html">
                 <div class="boxAves">
-                    <img class="boxImageAves" src="../img/img_zoologico/Hawk.png"
+                    <img class="boxImageAves"
+                        src="../img/img_zoologico/Hawk.png"
                         alt>
                     <p class="boxText"> Aves </p>
                 </div></a>
@@ -81,7 +83,46 @@
         </div>
 
     </body>
-    <footer class="footer">
-        <a href="zoologico.html" class="home">Home</a>
+    <footer id="footer-content">
+        <div>
+            <h5>Trabalho desenvolvido por Alunos da Faculdade SENAC -
+                Brasília/DF</h5>
+            <br>
+            <div id="easterEgg">
+                <a class="footerLink" href="https://github.com/Batatiago"
+                    target="_blank">Tiago de Andrade Lima </a>
+                <img class="imgHover"
+                    src="../img/img_home/fortnite-dance-anime.gif" alt="aniaDance">
+            </div>
+            <div id="easterEgg">
+                <a class="footerLink" href="https://github.com/AndreBlackDragon"
+                    target="_blank">Andre Luis Macedo Nascimento</a>
+                <img class="imgHover"
+                    src="../img/img_home/ToothlessDancing.gif"
+                    alt="ToothlessDancing">
+            </div>
+            <div>
+                <a class="footerLink" href="https://github.com/DouglasRochaTech"
+                    target="_blank">Douglas Rocha Vasco</a>
+            </div>
+            <div>
+                <a class="footerLink" href="https://github.com/FoxYokai"
+                    target="_blank">Jonas Santos Barbosa</a>
+            </div>
+            <div id="easterEgg">
+                <a class="footerLink" href="https://github.com/Rapha3lmendess"
+                    target="_blank">Raphael Alves Mendes</a>
+                <img class="imgHover"
+                    src="../img/img_home/ScratchBear.gif" alt="ScratchBear">
+            </div>
+            <div>
+                <a class="footerLink" href="https://github.com/CalebeBezerra"
+                    target="_blank">Calebe Bezerra Feitosa</a>
+            </div>
+        </div>
+        <div>
+            <p id="rights">© 2025 DF Checkpoints. Todos os direitos
+                reservados.</p>
+        </div>
     </footer>
 </html>
