integracao da esplanada junto com css e implementacao do google maps em todas as paginas

--- a/pages/eslplanada.html
+++ b/pages/eslplanada.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="../img/img_home/favicon.png"
+            type="image/x-icon">
         <title>Esplanada dos Ministérios</title>
         <link rel="stylesheet" href="../style.css">
     </head>
@@ -132,7 +133,7 @@
 
         <h1> Congresso Nacional</h1>
         <!--imagem-->
-        <img class="imagem" src="img/_Congresso Nacional.png.png" alt>
+        <img class="imagem-esplanada" src="img/_Congresso Nacional.png.png" alt>
         <p>O Palácio do Congresso Nacional abriga a Câmara dos Deputados e o
             Senado Federal. Projetado por Oscar Niemeyer, é um dos principais
             cartões postais de Brasília e está localizado no extremo leste do
@@ -198,7 +199,8 @@
                 <a class="footerLink" href="https://github.com/Batatiago"
                     target="_blank">Tiago de Andrade Lima </a>
                 <img class="imgHover"
-                    src="../img/img_home/fortnite-dance-anime.gif" alt="aniaDance">
+                    src="../img/img_home/fortnite-dance-anime.gif"
+                    alt="aniaDance">
             </div>
             <div id="easterEgg">
                 <a class="footerLink" href="https://github.com/AndreBlackDragon"
