--- a/pages/catedral.html
+++ b/pages/catedral.html
@@ -1,53 +1,63 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Catedral</title>
-        <link rel="stylesheet" href="../style.css">
-        <link rel="shortcut icon" href="../img/img_catedral/favicon.png"
-            type="image/x-icon">
-    </head>
-    <header id="cabeçalho">
-        <div id="logo">
-            <img src="../img/img_home/brasao-do-distrito-federal.png"
-                alt="logo do Distrito Federal" width="100" height="100">
-        </div>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Catedral</title>
+    <link rel="stylesheet" href="../style.css">
+    <link rel="shortcut icon" href="../img/img_catedral/favicon.png"
+      type="image/x-icon">
+  </head>
+  <header id="cabeçalho">
+    <div id="logo">
+      <img src="../img/img_home/brasao-do-distrito-federal.png"
+        alt="logo do Distrito Federal" width="100" height="100">
+    </div>
 
-        <input type="checkbox" id="menuFlutuanteCheckbox">
-        <label for="menuFlutuanteCheckbox" id="menu-overlay"></label>
-        <label for="menuFlutuanteCheckbox" id="menuFlutuante">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </label>
+    <input type="checkbox" id="menuFlutuanteCheckbox">
+    <label for="menuFlutuanteCheckbox" id="menu-overlay"></label>
+    <label for="menuFlutuanteCheckbox" id="menuFlutuante">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </label>
 
-        <nav id="linksHeader">
-            <a href="../index.html">Início</a>
-            <a href="https://ouvidoria.df.gov.br/canal-atendimento-162"
-                target="_blank">Contato</a>
-            <a href="nicolandia.html">Nicolândia</a>
-            <a href="planetario.html">Planetário</a>
-            <a href="zoologico.html">Zoológico</a>
-            <a href="catedral.html">Catedral</a>
-            <a href="pontao.html">Pontão</a>
-            <a href="eslplanada.html">Esplanada</a>
-        </nav>
-    </header>
-    <body>
-        <div id="catedralBody">
-            <h1 class="title">Catedral Metropolitana de Brasília</h1>
-            <br>
-            <img id="map-image" src="../img/img_catedral/catedral.jpg"
-                alt="Catedral de Brasília" width="600" height="400">
-            <p>A Catedral Metropolitana de Brasília, projetada por Oscar
-                Niemeyer, é um ícone da arquitetura moderna e um dos
-                principais
-                pontos turísticos da cidade. Sua estrutura em forma de mãos
-                erguidas simboliza a fé e a espiritualidade.</p>
-        </div>
-    </body>
-    <footer id="footer-content">
+    <nav id="linksHeader">
+      <a href="../index.html">Início</a>
+      <a href="https://ouvidoria.df.gov.br/canal-atendimento-162"
+        target="_blank">Contato</a>
+      <a href="nicolandia.html">Nicolândia</a>
+      <a href="planetario.html">Planetário</a>
+      <a href="zoologico.html">Zoológico</a>
+      <a href="catedral.html">Catedral</a>
+      <a href="pontao.html">Pontão</a>
+      <a href="eslplanada.html">Esplanada</a>
+    </nav>
+  </header>
+  <body>
+    <div id="catedralBody">
+      <h1 class="title">Catedral Metropolitana de Brasília</h1>
+      <br>
+      <img id="map-image" src="../img/img_catedral/catedral.jpg"
+        alt="Catedral de Brasília" width="600" height="400">
+      <p>A Catedral Metropolitana de Brasília, projetada por Oscar
+        Niemeyer, é um ícone da arquitetura moderna e um dos
+        principais
+        pontos turísticos da cidade. Sua estrutura em forma de mãos
+        erguidas simboliza a fé e a espiritualidade.</p>
+    </div>
+    <section class="localizacao">
+      <h2>Localização</h2>
+      <p>A Catedral Metropolitana de Brasília fica na Esplanada dos Ministérios,
+        Brasília - DF.</p>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3839.1072763140874!2d-47.87812162384446!3d-15.798296484842702!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935a3b224c1f9a91%3A0x55fbb231e9698d19!2sCatedral%20Metropolitana%20Nossa%20Senhora%20Aparecida!5e0!3m2!1spt-BR!2sbr!4v1763149279702!5m2!1spt-BR!2sbr"
+        width="90%" height="400" style="border:0;" allowfullscreen
+        loading="lazy">
+      </iframe>
+    </section>
+  </body>
+  <footer id="footer-content">
     <div>
       <h5>Trabalho desenvolvido por Alunos da Faculdade SENAC -
         Brasília/DF</h5>
