--- a/pages/nicolandia.html
+++ b/pages/nicolandia.html
@@ -114,6 +114,16 @@
                 tapetes.<br><br><br><br><br><br>
             </div>
         </a>
+        <section class="localizacao">
+            <h2>Localização</h2>
+            <p>O Parque Urbano Nicolândia fica proximo ao Parque da Cidade, em
+                Brasília - DF.</p>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d959.7976817073861!2d-47.89827202638951!3d-15.793894110105931!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935a3a884716d7a7%3A0x95ce6b878c5cad4b!2sParque%20Urbano%20Nicol%C3%A2ndia!5e0!3m2!1spt-BR!2sbr!4v1763149730528!5m2!1spt-BR!2sbr"
+                width="90%" height="400" style="border:0;" allowfullscreen
+                loading="lazy">
+            </iframe>
+        </section>
     </body>
     <footer id="footer-content">
         <div>
@@ -124,7 +134,8 @@
                 <a class="footerLink" href="https://github.com/Batatiago"
                     target="_blank">Tiago de Andrade Lima </a>
                 <img class="imgHover"
-                    src="../img/img_home/fortnite-dance-anime.gif" alt="aniaDance">
+                    src="../img/img_home/fortnite-dance-anime.gif"
+                    alt="aniaDance">
             </div>
             <div id="easterEgg">
                 <a class="footerLink" href="https://github.com/AndreBlackDragon"
