--- a/pages/planetario.html
+++ b/pages/planetario.html
@@ -88,6 +88,16 @@
             população exposições e eventos educativos, culturais
             e científicos ligados à astronomia.
         </p>
+        <section class="localizacao">
+            <h2>Localização</h2>
+            <p>O Planetário de Brasília fica na Asa Sul, em
+                Brasília - DF.</p>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3839.3076793710347!2d-47.903951213167794!3d-15.787722345792968!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935a3af46f8174db%3A0x2ede7fe61bd24168!2sPlanet%C3%A1rio%20de%20Bras%C3%ADlia!5e0!3m2!1spt-BR!2sbr!4v1763149795350!5m2!1spt-BR!2sbr"
+                width="90%" height="400" style="border:0;" allowfullscreen
+                loading="lazy">
+            </iframe>
+        </section>
     </body>
     <footer id="footer-content">
         <div>
