--- a/pages/pontao.html
+++ b/pages/pontao.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pontão do Lago Sul - Brasília</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="shortcut icon" href="../img/img_home/favicon.png"
+      type="image/x-icon">
   </head>
   <header id="cabeçalho">
     <div id="logo">
@@ -144,7 +146,7 @@
       <p>O Pontão do Lago Sul fica no Setor de Clubes Esportivos Sul, Trecho 2,
         Brasília - DF.</p>
       <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3838.3728701773633!2d-47.8727609!3d-15.8438734!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935a3b4b38df6e31%3A0xe7c982257edb62dc!2sPont%C3%A3o%20do%20Lago%20Sul!5e0!3m2!1spt-BR!2sbr!4v1699999999999!5m2!1spt-BR!2sbr"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3838.575037507065!2d-47.8734408!3d-15.826346299999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935a24dadcd2f683%3A0x113d72b3f829d11d!2sPont%C3%A3o%20Lago%20Sul!5e0!3m2!1spt-BR!2sbr!4v1763149130832!5m2!1spt-BR!2sbr"
         width="90%" height="400" style="border:0;" allowfullscreen
         loading="lazy">
       </iframe>
