--- a/pages/nicolandia.html
+++ b/pages/nicolandia.html
@@ -130,37 +130,43 @@
             <h5>Trabalho desenvolvido por Alunos da Faculdade SENAC -
                 Brasília/DF</h5>
             <br>
-            <div id="easterEgg">
+            <div class="easterEgg">
                 <a class="footerLink" href="https://github.com/Batatiago"
                     target="_blank">Tiago de Andrade Lima </a>
                 <img class="imgHover"
-                    src="../img/img_home/fortnite-dance-anime.gif"
-                    alt="aniaDance">
+                    src="../img/img_home/fortnite-dance-anime.gif" alt="aniaDance">
             </div>
-            <div id="easterEgg">
+            <div class="easterEgg">
                 <a class="footerLink" href="https://github.com/AndreBlackDragon"
                     target="_blank">Andre Luis Macedo Nascimento</a>
                 <img class="imgHover"
                     src="../img/img_home/ToothlessDancing.gif"
                     alt="ToothlessDancing">
             </div>
-            <div>
+            <div class="easterEgg">
                 <a class="footerLink" href="https://github.com/DouglasRochaTech"
                     target="_blank">Douglas Rocha Vasco</a>
+                <img class="imgHover"
+                    src="../img/img_home/chihuahua dancando.gif"
+                    alt="chihuahuaDance">
             </div>
-            <div>
+            <div class="easterEgg">
                 <a class="footerLink" href="https://github.com/FoxYokai"
-                    target="_blank">Jonas Santos Barbosa</a>
+                    target="_blank">Jonas Santos Barbosa</a><img
+                    class="imgHover"
+                    src="../img/img_home/tales.gif" alt="talesDance">
             </div>
-            <div id="easterEgg">
+            <div class="easterEgg">
                 <a class="footerLink" href="https://github.com/Rapha3lmendess"
                     target="_blank">Raphael Alves Mendes</a>
                 <img class="imgHover"
-                    src="../img/img_home/ScratchBear.gif" alt="ScratchBear">
+                    src="../img/img_home/yoshi-dancing-egg-gif-unscreen.gif" alt="yoshiDance">
             </div>
-            <div>
+            <div class="easterEgg">
                 <a class="footerLink" href="https://github.com/CalebeBezerra"
                     target="_blank">Calebe Bezerra Feitosa</a>
+                <img class="imgHover"
+                    src="../img/img_home/dancing-dino.gif" alt="dancingDino">
             </div>
         </div>
         <div>
