Footer e Header fix

--- a/pages/zoologicoPages/Anfibios.html
+++ b/pages/zoologicoPages/Anfibios.html
@@ -50,6 +50,6 @@
 
     </body>
     <footer class="footer">
-        <a href="Zoologico.html" class="home">Home</a>
+        <a href="../zoologico.html" class="home">Home</a>
     </footer>
 </html>
