--- a/pages/zoologicoPages/Borboletas.html
+++ b/pages/zoologicoPages/Borboletas.html
@@ -9,7 +9,7 @@
             href="../../img/img_zoologico/ReptileEye.webp">
     </head>
     <header class="banner">
-        <a href="/pages/zoologico.html" class="home">Home</a>
+        <a href="../zoologico.html" class="home">Home</a>
     </header>
     <body class="background">
         <h1 class="zoo-title"> Seção de Borboletas </h1>
